:bug: fix: horizontal scroll test

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,7 +1,7 @@
 *,
 *::after,
 *::before {
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     margin: 0;
     padding: 0;
     list-style: none !important;
