--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -138,11 +138,11 @@ body
 
     .feedback
         max-width: 1160px
-        margin: 0 auto
+        margin: 0 auto 32rem
         @include mixins.tablet
             padding: 0 2rem
         @include mixins.mobile
-            margin-bottom: -3rem
+            margin-bottom: 20rem
 
         .feedback-quote
             position: relative
@@ -190,13 +190,13 @@ body
 .cta-box
     width: 863px
     max-width: 90%
-    top: 7rem
+    bottom: 7rem
     left: 50%
     transform: translateX(-50%)
     background: variables.$blue300
     box-shadow: 5px 5px 8px 0px rgba(0, 0, 0, 0.25)
     @include mixins.mobile
-        top: 5rem
+        bottom: -8rem
         max-width: 90%
 
     .cta-title
